Restrict Git tracking to only website/ and rag/ directories
- Updated .gitignore to exclude all directories except website/ and rag/
- Only essential files (.github/, scripts/, .gitignore) remain tracked
- All other directories (Knowledge/, archive/, chatgpt/, cursor/, etc.) are now ignored
- Ensures only website and RAG content is deployed to GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-# Jekyll
+# Only website/ and rag/ should be deployed
+# Exclude everything else
+
+# Exclude all root-level files and directories except essential ones
+/*
+!/.gitignore
+!/.github/
+!/scripts/
+!/website/
+!/rag/
+
+# Jekyll build artifacts
 _site/
 .sass-cache/
 .jekyll-cache/
@@ -15,6 +26,7 @@ Gemfile.lock
 *.swp
 *.swo
 *~
+.cursor/
 
 # OS
 .DS_Store
