Add Knowledge/ directory to Git tracking and deployment
- Updated .gitignore to include Knowledge/ directory
- Updated GitHub Actions workflow to process Knowledge/** changes
- Knowledge/ directory will now be tracked and deployed

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'rag/**'
       - 'website/**'
+      - 'Knowledge/**'
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
