Move scripts/ to website/scripts/ for better organization
- Moved scripts/ folder into website/scripts/
- Updated GitHub Actions workflow to use website/scripts/update-website.py
- Scripts are now part of website/ folder structure
- Only rag/ and website/ are tracked (scripts is inside website/)

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -30,11 +30,11 @@ jobs:
       
       - name: Update website files
         run: |
-          python scripts/update-website.py --verbose
+          python website/scripts/update-website.py --verbose
       
       - name: Validate changes
         run: |
-          python scripts/update-website.py --validate-only
+          python website/scripts/update-website.py --validate-only
       
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
