Deploy: Auto-sync RAG index and homepage
- Rebuilt rag-index.md from rag/ folder (139 files, 20 domains)
- Synced homepage with all 20 categories
- Added lessons learned to prevent future mistakes
- Ready for deployment

--- a/website/root/_config.yml
+++ b/website/root/_config.yml
@@ -37,6 +37,7 @@ exclude:
   - Knowledge/
   - scripts/
   - website/docs/
+  - website/meta/
   - .cursor/
   - check-cursor-indexing.sh
   - clear-research.sh
