Fix: Correct path calculation in update-website.py
- Fixed BASE_DIR to use parent.parent.parent (repo root)
- Script was looking in website/rag instead of rag/
- Updated workflow to run sync-homepage.py first
- Fixes 'No markdown files found' error in GitHub Actions

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -28,7 +28,11 @@ jobs:
         with:
           python-version: '3.11'
       
-      - name: Update website files
+      - name: Sync RAG index and homepage
+        run: |
+          python website/scripts/sync-homepage.py
+      
+      - name: Update website files (sitemap)
         run: |
           python website/scripts/update-website.py --verbose
       
