Fix: Install PyYAML dependency in GitHub Actions
- Added pip install pyyaml step before running sync-homepage.py
- Fixes ModuleNotFoundError: No module named 'yaml'
- Required for sync-homepage.py to parse YAML frontmatter

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -28,6 +28,10 @@ jobs:
         with:
           python-version: '3.11'
       
+      - name: Install Python dependencies
+        run: |
+          pip install pyyaml
+      
       - name: Sync RAG index and homepage
         run: |
           python website/scripts/sync-homepage.py
