Fix: Remove path restrictions from workflow trigger
- Workflow now triggers on any push to main branch
- Path restrictions were preventing automatic triggers
- Allows workflow to run on all changes

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -5,9 +5,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'rag/**'
-      - 'website/**'
+    # Remove path restrictions to trigger on any push to main
+    # paths:
+    #   - 'rag/**'
+    #   - 'website/**'
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
