Fix website deployment and update scripts
- Fix GitHub Pages deployment workflow (add timeouts and verification)
- Create examples/index.md page for integration guides
- Enhance sync-homepage.py to rebuild rag-library.json
- Fix update-rag-and-website.sh script paths and workflow order
- Update WEBSITE-RULES.md with complete workflow documentation

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -83,10 +83,21 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./_site
+        timeout-minutes: 3
+      
+      - name: Verify artifact upload
+        run: |
+          if [ -z "${{ steps.upload.outputs.artifact-id }}" ]; then
+            echo "❌ Artifact upload failed - no artifact ID"
+            exit 1
+          fi
+          echo "✅ Artifact uploaded successfully: ${{ steps.upload.outputs.artifact-id }}"
       
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        timeout-minutes: 5
+        continue-on-error: false
 
