--- a/website/root/_config.yml
+++ b/website/root/_config.yml
@@ -63,6 +63,10 @@ defaults:
     values:
       layout: "default"
   - scope:
+      path: "rag/examples"
+    values:
+      layout: "default"
+  - scope:
       path: "examples"
     values:
       layout: "default"
