Fix: Restore GITHUB_TOKEN to deploy step (was in working commit b6cb79c)
- The working deployment had GITHUB_TOKEN explicitly set
- This was removed in recent changes, causing 404 errors
- Restoring it to match the successful deployment configuration

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -101,6 +101,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         timeout-minutes: 5
         continue-on-error: false
 
