--- a/website/root/Gemfile
+++ b/website/root/Gemfile
@@ -1,10 +1,9 @@
 source "https://rubygems.org"
 
-# Jekyll and GitHub Pages
+# Jekyll
 gem "jekyll", "~> 4.3"
-gem "github-pages", group: :jekyll_plugins
 
-# Jekyll plugins
+# Jekyll plugins (compatible with Jekyll 4.x)
 gem "jekyll-feed", "~> 0.15"
 gem "jekyll-sitemap", "~> 1.4"
 gem "jekyll-seo-tag", "~> 2.8"
