--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -54,17 +54,10 @@ jobs:
         run: |
           python3 website/scripts/update-website.py --validate-only || true
       
-      - name: Setup Ruby
-        # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
-        uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
-        with:
-          ruby-version: '3.1' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
-      
       - name: Prepare Jekyll directories
         run: |
           # Copy website files to root (Jekyll requires them in root for GitHub Pages)
+          # Must copy Gemfile BEFORE Ruby setup so bundler can find it
           if [ -d "website/_layouts" ]; then
             cp -r website/_layouts _layouts
           fi
@@ -74,6 +67,14 @@ jobs:
           if [ -d "website/root" ]; then
             cp website/root/* .
           fi
+      
+      - name: Setup Ruby
+        # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
+        uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
+        with:
+          ruby-version: '3.1' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
       
       - name: Setup Pages
         id: pages
